--- a/Style.css
+++ b/Style.css
@@ -98,5 +98,65 @@ hr{
     border-color: #EF4035;
     max-width: 200px;
     margin: 2px auto;
+}
 
+
+.content{
+    width: 850px;
+    margin: 0 auto;
+    font-family: Roboto;
+}
+
+img{
+    width: 250px;
+}
+
+
+.wrapper, .wrapper2 {
+    display: flex;
+    text-align: center;
+    margin: 20px auto;
+
+}
+
+
+.wrapper hr {
+    margin: 2px auto 2px;
+    width: 20px;
+    border-top: 0;
+}
+
+.content  p{
+    height: 38px;
+    line-height: 35px;
+    color: #777;
+    font-size: 18px;
+
+
+}
+li{
+    color: #777;
+    font-size: 16px;
+}
+
+.wrapper, .wrapper2  {
+    text-align: center;
+    margin: 40px auto;
+}
+
+.wrapper  .box, .box2, .box3, .box4{
+    margin: 10px 20px;
+
+}
+.wrapper2{
+    padding: 10px;
+}
+.wrapper2 hr {
+    margin: 2px auto 2px;
+    width: 20px;
+    border-top: 0;
+}
+.content h1 {
+    line-height: 40px;
+    font-size: 20px;
 }
